# cargo-git-edit

./: Cargo.toml  license_header.txt  rustfmt.toml
src/: cli.rs  cli.yml  err.rs  main.rs
tests/mockproject/: Cargo.toml  out
